--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,7 +5,9 @@ on:
     - cron: '0 7 * * *'  # щодня о 07:00 UTC (10:00 за Києвом)
   workflow_dispatch:
 
-
+permissions:
+  contents: read
+  
 jobs:
   run-python-script:
     runs-on: ubuntu-latest
